syntax = "proto3";



option java_package = "org.acme.client";
option java_multiple_files = true;
option java_outer_classname = "PersonProto";

package user;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


service PersonsService {
  rpc FindByName(google.protobuf.StringValue) returns (Persons) {}
  rpc FindByAge(google.protobuf.Int32Value) returns (Persons) {}
  rpc FindById(google.protobuf.StringValue) returns (Person) {}
  rpc FindAll(google.protobuf.Empty) returns (Persons) {}
  rpc AddPerson(Person) returns (Person) {}


}


message Person {

  string id = 1;
  string username = 2;

}


message Persons {
  repeated Person person = 1;
}


